--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,7 @@
     "@nestjs/serve-static": "5.0.3",
     "@nestjs/swagger": "11.2.4",
     "@prisma/client": "6.13.0",
-    "add": "^2.0.6",
+    "add": "2.0.6",
     "bullmq": "5.56.8",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
@@ -43,8 +43,7 @@
     "rxjs": "7.8.2",
     "sharp": "0.34.4",
     "telegraf": "4.16.3",
-    "uuid": "11.0.5",
-    "yarn": "^1.22.22"
+    "uuid": "11.0.5"
   },
   "devDependencies": {
     "@nestjs/cli": "11.0.8",
@@ -52,17 +51,18 @@
     "@nestjs/testing": "11.1.5",
     "@types/dotenv": "8.2.3",
     "@types/express": "5.0.3",
-    "@types/jest": "30.0.0",
     "@types/multer": "2.0.0",
     "@types/node": "24.1.0",
     "@types/nodemailer": "7.0.4",
     "@types/supertest": "6.0.3",
-    "jest": "30.0.5",
+    "jest": "30.2.0",
     "prisma": "6.13.0",
     "source-map-support": "0.5.21",
     "supertest": "7.1.4",
-    "ts-jest": "29.4.0",
-    "tsconfig-paths": "4.2.0"
+    "ts-jest": "29.4.6",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.2.2",
+    "typescript-eslint": "8.53.0"
   },
   "jest": {
     "moduleFileExtensions": [
