--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,10 @@
     "apigen": "npx @rtk-query/codegen-openapi ./openapi/config.ts",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
-    "checkcode": "yarn typecheck && yarn format && yarn lint:fix"
+    "checkcode": "yarn typecheck && yarn format && yarn lint:fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@bem-react/classname": "1.7.0",
@@ -33,9 +36,14 @@
     "yup": "1.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "9.39.2",
     "@hookform/devtools": "4.3.2",
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/dotenv-webpack": "7.0.8",
+    "@types/jest": "30.0.0",
     "@types/keycloak-js": "3.4.1",
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
@@ -49,10 +57,13 @@
     "dotenv-webpack": "8.1.1",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-react-refresh": "0.4.7",
+    "eslint-plugin-react-refresh": "0.4.26",
     "fork-ts-checker-webpack-plugin": "9.0.0",
-    "globals": "16.3.0",
+    "globals": "17.0.0",
     "html-webpack-plugin": "5.5.3",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "30.2.0",
     "mini-css-extract-plugin": "2.7.6",
     "postcss": "8.4.39",
     "react-refresh": "0.14.0",
@@ -62,9 +73,10 @@
     "style-loader": "3.3.3",
     "stylus": "0.64.0",
     "stylus-loader": "8.1.1",
+    "ts-jest": "29.4.6",
     "ts-node": "10.9.1",
     "typescript": "5.2.2",
-    "typescript-eslint": "8.37.0",
+    "typescript-eslint": "8.53.0",
     "webpack": "5.104.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1"
