--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "docker": "docker-compose up -d"
   },
   "devDependencies": {
-    "@eslint/js": "9.31.0",
+    "@eslint/js": "9.39.2",
     "@ianvs/prettier-plugin-sort-imports": "4.4.2",
-    "@typescript-eslint/eslint-plugin": "8.0.0",
-    "@typescript-eslint/parser": "8.0.0",
+    "eslint": "9.39.2",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "husky": "9.1.7",
@@ -29,7 +28,6 @@
     "prettier": "3.0.0",
     "ts-loader": "9.5.2",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2",
-    "eslint": "9.6.0"
+    "typescript": "5.2.2"
   }
 }
