add method for user delete, fix configs, downgrade lib for apigen

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -6,7 +6,7 @@
     "target": "es5",
     "jsx": "react-jsx",
     "allowJs": true,
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "composite": true,
