--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "placer",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "workspaces": {
     "packages": [
       "api",
